--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,6 +5,15 @@
 
 <body>
 
+    {% include nav.html %}
+
+    {% include about.html %}
+
+    {% include skills.html %}
+
+    {% include projects.html %}
+
+    {% include blogs.html %}
         
     {% include extra.html %}
 
